# ConferenceRegistration

./: CMakeLists.txt  Doxyfile  README.md  build_and_run.sh
.github/workflows/: build.yml
COS3711-02-01/: CMakeLists.txt  guestregistration.cpp  guestregistration.h  main.cpp  mainwindow.cpp  mainwindow.h  newregistrationdialog.cpp  newregistrationdialog.h  person.cpp  person.h  registration.cpp  registration.h  registrationfilterproxymodel.cpp  registrationfilterproxymodel.h  registrationlist.cpp  registrationlist.h  registrationmodel.cpp  registrationmodel.h  registrationtypes.cpp  searchdialog.cpp  searchdialog.h  standardregistration.cpp  standardregistration.h  studentregistration.cpp  studentregistration.h  totalfeesdialog.cpp  totalfeesdialog.h  totalregistereddialog.cpp  totalregistereddialog.h  userinterface.cpp  userinterface.h
COS3711-02-01-TEST/: CMakeLists.txt  tst_personunittest.cpp
COS3711-02-02/: CMakeLists.txt  filewriter.cpp  filewriter.h  mainwindow.cpp  mainwindow.h  newregistrationdialog.cpp  person.cpp  registrationfilterproxymodel.cpp  registrationlist.cpp  registrationlist.h  registrationlistwriter.cpp  registrationlistwriter.h  registrationmodel.cpp  registrationtypes.cpp  registrationtypes.h  standardregistration.h
COS3711-02-03/: CMakeLists.txt  filereader.cpp  filereader.h  filewriter.cpp  guestregistration.cpp  main.cpp  mainwindow.cpp  mainwindow.h  newregistrationdialog.cpp  registration.h  registrationlist.cpp  registrationlist.h  registrationlistreader.cpp  registrationlistreader.h  registrationlistwriter.cpp  registrationtypes.cpp  standardregistration.cpp  totalregistereddialog.cpp
COS3711-02-04/: CMakeLists.txt  filereader.cpp  filereader.h  filewriter.cpp  filewriter.h  guestregistration.cpp  guestregistration.h  mainwindow.cpp  mainwindow.h  newregistrationdialog.cpp  newregistrationdialog.h  person.cpp  registration.cpp  registrationfactory.cpp  registrationfactory.h  registrationgenerator.py  registrationlist.cpp  registrationlist.h  registrationlist.xml  registrationlistreader.cpp  registrationlistreader.h  registrationlistwriter.cpp  registrationlistwriter.h  registrationmodel.cpp  registrationmodel.h  registrationtypes.cpp  resources.qrc  standardregistration.cpp  standardregistration.h  studentregistration.cpp  studentregistration.h  totalfeesdialog.cpp  totalfeesdialog.h  totalregistereddialog.cpp  totalregistereddialog.h
ConferenceRegistrationTests/: CMakeLists.txt  tst_personunittest.cpp  tst_standardregistrationunittest.cpp
ConferenceRegistrationTests/RegistrationListUnitTest/: tst_registrationlistunittest.cpp
ConferenceRegistrationTests/StandardRegistrationUnitTest/: tst_standardregistrationunittest.cpp
ConferenceRegistrationTests/StudentRegistrationUnitTest/: tst_studentregistrationunittest.cpp
Tests/: CMakeLists.txt
Tests/GuestRegistrationUnitTest/: CMakeLists.txt  tst_guestregistrationunittest.cpp
Tests/PersonUnitTest/: CMakeLists.txt  tst_personunittest.cpp
Tests/RegistrationListUnitTest/: CMakeLists.txt  tst_registrationlistunittest.cpp
Tests/RegistrationModelUnitTest/: CMakeLists.txt  tst_registrationmodelunittest.cpp
Tests/StandardRegistrationUnitTest/: CMakeLists.txt  tst_standardregistrationunittest.cpp
Tests/StudentRegistrationUnitTest/: CMakeLists.txt  tst_studentregistrationunittest.cpp
docs/: annotated.html  class_file_reader-members.html  class_file_reader.html  class_file_writer-members.html  class_file_writer.html  class_guest_registration-members.html  class_guest_registration.html  class_main_window-members.html  class_main_window.html  class_new_registration_dialog-members.html  class_new_registration_dialog.html  class_person-members.html  class_person.html  class_registration-members.html  class_registration.html  class_registration_factory-members.html  class_registration_factory.html  class_registration_filter_proxy_model-members.html  class_registration_filter_proxy_model.html  class_registration_list-members.html  class_registration_list.html  class_registration_list_reader-members.html  class_registration_list_reader.html  class_registration_list_writer-members.html  class_registration_list_writer.html  class_registration_model-members.html  class_registration_model.html  class_registration_types-members.html  class_registration_types.html  class_standard_registration-members.html  class_standard_registration.html  class_student_registration-members.html  class_student_registration.html  class_total_fees_dialog-members.html  class_total_fees_dialog.html  class_total_registered_dialog-members.html  class_total_registered_dialog.html  classes.html  dir_c00c3d99151a7d60f2ce47dc30a503e5.html  filereader_8cpp.html  (+63 more)
docs/html/: annotated.html  class_file_reader-members.html  class_file_reader.html  class_file_writer-members.html  class_file_writer.html  class_guest_registration-members.html  class_guest_registration.html  class_main_window-members.html  class_main_window.html  class_new_registration_dialog-members.html  class_new_registration_dialog.html  class_person-members.html  class_person.html  class_registration-members.html  class_registration.html  class_registration_factory-members.html  class_registration_factory.html  class_registration_filter_proxy_model-members.html  class_registration_filter_proxy_model.html  class_registration_list-members.html  class_registration_list.html  class_registration_list_reader-members.html  class_registration_list_reader.html  class_registration_list_writer-members.html  class_registration_list_writer.html  class_registration_model-members.html  class_registration_model.html  class_registration_types-members.html  class_registration_types.html  class_standard_registration-members.html  class_standard_registration.html  class_student_registration-members.html  class_student_registration.html  class_total_fees_dialog-members.html  class_total_fees_dialog.html  class_total_registered_dialog-members.html  class_total_registered_dialog.html  classes.html  dir_c00c3d99151a7d60f2ce47dc30a503e5.html  doxygen_crawl.html  (+62 more)
docs/latex/: annotated.tex  (+87 more)
(+34 files in other folders)
